# nativefiledialog

./: CMakeLists.txt
Android/: build.gradle  settings.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
Android/nfd/: build.gradle
Android/nfd/src/main/: AndroidManifest.xml
Android/testapp/: build.gradle
Android/testapp/src/main/: AndroidManifest.xml
Android/testapp/src/main/cpp/: TestAppLib.c
Android/testapp/src/main/java/net/playcontrol/blurrrcore/testapp/: MainActivity.java
Android/testapp/src/main/res/layout/: activity_main.xml
AndroidCMake/: Android.mk  InitialCache_Android.cmake  android.toolchain.cmake
src/: nfd_cocoa.m  nfd_common.c  nfd_dummy.c  nfd_gtk.c  nfd_gtk_dlopen.h  nfd_win.cpp
src/include/: nfd.h
test/: test_opendialog.c
